--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,10 @@
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
-  font-family: Arial, sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 nav ul {
