--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,4 +1,3 @@
-/* Header.css */
 .header {
     background-color: #333;
     color: #fff;
@@ -13,6 +12,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    margin: 0 3em 0 3em;
 }
 
 .logo a {
