--- a/src/styles/ProductList.css
+++ b/src/styles/ProductList.css
@@ -1,5 +1,11 @@
 .product-list-container {
   padding: 1em;
+  margin: 3em 3em 0 3em;
+}
+
+.product-list-container h1 {
+  text-align: center;
+  margin-bottom: 1em;
 }
 
 .product-list-container table {
